# generic-vector-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Vector-impl.cpp  Vector.cppm  format.sh  main.cpp
src/: CMakeLists.txt  Vector.cppm  main.cpp
tests/: CMakeLists.txt  main.cpp
